--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
 
 /* Your CSS Code here. */
+/* Holder Styles */
+.holder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* Item-1 Styles */
+.item-1 {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
